# kinoro

./: .gitignore  CLAUDE.md  README.md
app/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
server/: conftest.py  manage.py  pyproject.toml  requirements.txt
server/apps/core/: models.py
server/apps/health/: views.py
server/apps/import_vp/: admin.py  apps.py  importers.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/import_vp/migrations/: 0001_initial.py
server/apps/import_vp/tests/: test_importers_pure.py  test_run_import.py  test_zip_import.py
server/apps/media/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/media/migrations/: 0001_initial.py  0002_mediaasset_vp_asset_id.py  0003_mediaasset_proxy_path_mediaasset_proxy_status.py
server/apps/media/tests/: test_ingest_integration.py  test_services_pure.py
server/apps/projects/: models.py  serializers.py  views.py
server/apps/projects/migrations/: 0001_initial.py
server/apps/render/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/render/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
server/engine/: __init__.py
server/engine/audio/: __init__.py
server/engine/color/: __init__.py
server/engine/deliver/: __init__.py  timeline_render.py
server/engine/deliver/tests/: test_multitrack.py  test_speed.py  test_text_overlay.py  test_transitions.py
server/engine/ffmpeg/: __init__.py  probe.py  thumbnails.py  transcode.py
server/engine/graph/: __init__.py
(+41 files in other folders)
